# fastapi-backend-course

./: pyproject.toml
.github/workflows/: lint.yml
git/src/: main.py
simple_backend/src/task_tracker/: README.md  basehttp.py  clients.py  config.py  main.py  models.py  requirements.txt  storage.py
